# quantem.gpu

./: CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: gpu-release.yml  release.yml
docs/: _config.yml  _toc.yml  backends.md  install.md  intro.md  requirements.txt
docs/_static/: custom.css
docs/api/: images_dpc.md  index.md  io.md  movie.md  products.md  ssb.md
docs/maintainer/: backend-4dstem-load-checklist.md  backend-optimization-matrix.md  migration.md  ssb-performance.md  virtual-image-kernel-checklist.md
docs/tutorials/: bf_df_adf.md  display_widget.md  dpc.md  load_hdf5.md  movie_rendering.md  scan_region.md  ssb.md  virtual_products.md  widget_migration.md
scripts/: benchmark_cuda_virtual_image.py  benchmark_hdf5_load.py  benchmark_webgpu_h5_browser.py  benchmark_webgpu_h5_product_browser.py  build_webgpu_h5_block_index_sidecar.py  build_webgpu_h5_frame_index_manifest.py  build_webgpu_selected_block_sidecar.py  gpu_release_check.sh
src/quantem/gpu/: __init__.py  calibration.py  detector.py  device.py  dpc.py  parallax.py  parallax_results.py  parallax_utils.py
src/quantem/gpu/compute/: __init__.py  backend.py  backends.py  cuda.py  mps.py  virtual_image_support.py
src/quantem/gpu/compute/metal/: README.md  reductions.msl
src/quantem/gpu/image/: __init__.py  dft_upsample.py
src/quantem/gpu/io/: __init__.py  bitshuffle.py  constants.py  hdf5.py  mps_multi.py  save.py
src/quantem/gpu/io/backends/: __init__.py  cpu.py  mps.py
src/quantem/gpu/io/backends/metal/: README.md  bslz4.msl
src/quantem/gpu/movie/: __init__.py  cuda_mp4.py  mps_mp4.py
src/quantem/gpu/ssb/: __init__.py  api.py  batch_optuna.py  dpc.py  engine.py  fft1024.py  fft128.py  fft256.py  fft512.py  fft_common.py  mps.py  preprocess.py  reconstruction.py  results.py  temporal.py
src/quantem/gpu/ssb/image/: __init__.py  filters.py
src/quantem/gpu/ssb/optics/: __init__.py  aberration.py  aberration_fitting.py  physics.py
src/quantem/gpu/webgpu/: README.md  __init__.py  bslz4.ts  compute.ts  device.ts  fft-shader.ts  h5reader.ts  lazy.ts  local-h5.ts  showptycho-ssb.ts
tests/: test_backend_load_checklist.py  test_calibration_products.py  test_cuda_virtual_image.py  test_device.py  test_dpc_rotation_agreement.py  test_hdf5_api.py  test_hdf5_real_agreement.py  test_hdf5_real_parity.py  test_import_without_cupy.py  test_movie_export.py  test_mps_chunk_dispatch.py  test_parallax.py  test_parallax_helpers.py  test_products_parity.py  test_real_product_env_match.py  test_realdata_parity.py  test_ssb_batch_optuna.py  test_ssb_cuda_128.py  test_ssb_mps_cuda_reference.py  test_ssb_temporal.py  test_ssb_ui_handoff.py  test_virtual_image_kernel_support.py  test_webgpu_sources.py  test_webgpu_widget_sync.py
