[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantem.gpu"
version = "0.0.1"
description = "Multi-backend accelerated STEM load, decompression, and compute for QuantEM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Sangjoon Bob Lee"}
]
keywords = [
    "4dstem",
    "cuda",
    "electron-microscopy",
    "gpu",
    "mps",
    "stem",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "h5py",
    "hdf5plugin",
    "numba>=0.60",
    "numpy>=2.0.0",
    "optuna",
    "tqdm",
]

[project.optional-dependencies]
cuda = [
    "cuda-python",
    "cupy-cuda12x>=12.0",
]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantem"]

[tool.hatch.build.targets.sdist]
include = [
    "src/quantem/gpu",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
