[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantem.gpu"
version = "0.0.1rc5"
description = "Multi-backend accelerated STEM load, decompression, and compute for QuantEM"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
requires-python = ">=3.11"
authors = [
    {name = "Sangjoon Bob Lee"}
]
keywords = [
    "4dstem",
    "cuda",
    "electron-microscopy",
    "gpu",
    "mps",
    "stem",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "h5py",
    "hdf5plugin",
    "numba>=0.60",
    "numpy>=2.0.0",
    "optuna",
    "tqdm",
]

[project.optional-dependencies]
cuda = [
    "cuda-python",
    "cupy-cuda12x>=12.0",
]
movie = [
    "imageio-ffmpeg",
    "pillow",
]
mps = [
    "mlx",
    "pyobjc-framework-Metal; platform_system == 'Darwin'",
]
dev = [
    "pytest>=8",
]
docs = [
    "jupyter-book>=1.0",
    "sphinx>=7",
    "myst-nb>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantem"]
artifacts = [
    "src/quantem/gpu/io/backends/metal/*.msl",
    "src/quantem/gpu/compute/metal/*.msl",
    "src/quantem/gpu/webgpu/*.md",
    "src/quantem/gpu/webgpu/*.ts",
]

[tool.hatch.build.targets.sdist]
include = [
    "docs",
    "src/quantem/gpu",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
